--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "react-stripe-elements": "^6.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:cypress": "cypress run",
-    "eject": "react-scripts eject"
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +39,10 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^4.12.1"
+    "@cypress/code-coverage": "^3.8.1",
+    "@cypress/instrument-cra": "^1.3.1",
+    "cypress": "^4.12.1",
+    "cypress-file-upload": "^4.0.7",
+    "cypress-react-unit-test": "^4.11.2"
   }
 }
