--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-stripe-elements": "^6.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:cypress": "cypress run",
+    "cypress:open": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -36,5 +38,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@cypress/code-coverage": "^3.8.1",
+    "@cypress/instrument-cra": "^1.3.1",
+    "cypress": "^5.0.0",
+    "cypress-file-upload": "^4.0.7",
+    "cypress-react-unit-test": "^4.11.2",
+    "faker": "^5.1.0"
   }
 }
