--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:cypress": "cypress run",
-    "cypress:open": "cypress open",
-    "eject": "react-scripts eject"
+    "test": "cypress run",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
