--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@cypress/instrument-cra": "^1.3.1",
     "cypress": "^5.0.0",
     "cypress-file-upload": "^4.0.7",
+    "cypress-iframe": "^1.0.1",
     "cypress-react-unit-test": "^4.11.2",
     "faker": "^5.1.0"
   }
